--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  Several inconsistencies in AX_TRY_RUN_JAVA have been fixed. See
+  <http://savannah.gnu.org/patch/?7835> for further details.
+
   AX_INCLUDE_STRCASECMP has been added. The macro detects which header file
   defines the strcasecmp() function. See <http://savannah.gnu.org/patch/?7836>
   for further details.
