--- a/NEWS
+++ b/NEWS
@@ -10,8 +10,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
-  Several inconsistencies in AX_TRY_RUN_JAVA have been fixed. See
-  <http://savannah.gnu.org/patch/?7835> for further details.
+  Several inconsistencies in AX_TRY_RUN_JAVA and AX_PROG_JAVA have been fixed.
+  See <http://savannah.gnu.org/patch/?7835> for further details.
 
   AX_INCLUDE_STRCASECMP has been added. The macro detects which header file
   defines the strcasecmp() function. See <http://savannah.gnu.org/patch/?7836>
