--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 #+TITLE: GNU Autoconf Archive NEWS             -*- mode:org;fill-column:79; -*-
 #+STARTUP: showall
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
+
 #
 # Copyright (c) 2012 Autoconf Archive Maintainers <autoconf-archive-maintainers@gnu.org>
 #
