--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The portability of AX_BOOST_SYSTEM and AX_BOOST_THREAD has been improved.
+
 * Noteworthy changes in release 2012.09.08 (2012-09-08) [stable]
 
   AX_BLAS has been extended to detect the Intel Math Kernel Library (MKL). See
