--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,12 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
-  The portability of AX_BOOST_SYSTEM and AX_BOOST_THREAD has been improved.
+  The portability of AX_BOOST_SYSTEM and AX_BOOST_THREAD has been improved. See
+  <http://lists.gnu.org/archive/html/autoconf-archive-maintainers/2012-09/msg00026.html>
+  for further details.
+
+  AX_COUNT_CPUS has been cleaned up. See <http://savannah.gnu.org/patch/?7860>
+  for further details.
 
 * Noteworthy changes in release 2012.09.08 (2012-09-08) [stable]
 
