AX_OPENMP: fix Mac OS X support
The macro was failing to detect the OpenMP flags for g++ on Mac OS 10.7 because
the AC_TRY_LINK test program was failing to link:

  Undefined symbols for architecture x86_64:
    "_gomp_thread_attr", referenced from:
        _initialize_env in libgomp.a(env.o)
  ld: symbol(s) not found for architecture x86_64
  collect2: ld returned 1 exit status

As explained at [1], without resorting to a non-portable hack, the test program
needs to actually use an OMP pragma.

[1] http://stackoverflow.com/questions/8983038/linker-errors-after-enabling-openmp-on-mac

--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,9 @@
   The new macro AX_PROG_CXX_FOR_BUILD has been added. Further details are
   available at <https://savannah.gnu.org/patch/?7891>.
 
+  Mac OS X support in AX_OPENMP has been improved. Further details are
+  available at <http://savannah.gnu.org/patch/?7893>.
+
 * Noteworthy changes in release 2012.11.14 (2012-11-14) [stable]
 
   The portability of AX_BOOST_SYSTEM and AX_BOOST_THREAD has been improved. See
