--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,11 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The new macro AX_LIB_EV has been added, which checks for libev in a
+  pkg-config-like manner. The purpose of the macro is to unifty behaviour
+  between distros that come with libev.pc and systems (e.g. upstream) that
+  don't. Further details are at <http://savannah.gnu.org/patch/?7938>.
+
   The portability of AX_PYTHON has been improved. Also, the macro now
   recognizes more recent versions of the Python interpreter, too. See
   <http://savannah.gnu.org/patch/?7897> for further details.
