gnulib: disable 'sc_prohibit_doubled_word' test to avoid false positive in ax_openmp.m4

--- a/TODO
+++ b/TODO
@@ -54,9 +54,12 @@
 
   * [ ] sc_copyright_check
   * [ ] sc_error_message_uppercase
+  * [ ] sc_file_system
+  * [ ] sc_GPL_version
   * [ ] sc_m4_quote_check
   * [ ] sc_prohibit_always-defined_macros
   * [ ] sc_prohibit_always_true_header_tests
+  * [ ] sc_prohibit_doubled_word
   * [ ] sc_prohibit_magic_number_exit
   * [ ] sc_prohibit_strcmp
   * [ ] sc_prohibit_test_minus_ao
