--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
 * Noteworthy changes in release 2013.02.02 (2013-02-02) [stable]
 
   Support for AIX has been improved in AX_PTHREAD. Further details are
