AX_PYTHON: make AX_PYTHON work on Arch Linux
See <http://savannah.gnu.org/patch/?7951> for further details.

--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,9 @@
 
   AX_JNI_INCLUDE_DIR has been extended to support FreeBSD.
 
+  AX_PYTHON has been extended to support ArchLinux. See
+  <http://savannah.gnu.org/patch/?7951> for further details.
+
 * Noteworthy changes in release 2013.02.02 (2013-02-02) [stable]
 
   Support for AIX has been improved in AX_PTHREAD. Further details are
