--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_EXT has been extended to recognize AVX SIMD instructions.
+
   A release tarball was added that is compressed with the free lzip utility.
 
   AX_JNI_INCLUDE_DIR has been extended to support FreeBSD.
