AX_GCC_ARCHFLAG: fix wrong CPU detection
AX_GCC_X86_CPUID does not guarantee that result is always 4*8-digit.
This commit fixes CPU detection issue caused by the wrong assumption
by fixing case patterns.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  Incorrect CPU detection in AX_GCC_ARCHFLAG has been fixed. See
+  <http://savannah.gnu.org/patch/?7978> for further details.
+
   AX_EXT has been extended to recognize AVX SIMD instructions.
 
   A release tarball was added that is compressed with the free lzip utility.
