--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_CHECK_GLU and AX_CHECK_GLUT have been added again by a new maintainer.
+
 * Noteworthy changes in release 2013.04.06 (2013-04-06) [stable]
 
   AX_PROG_CC_FOR_BUILD and AX_PROG_CXX_FOR_BUILD have been simplified to
