AX_PYTHON_DEVEL: don't override LOCALMODLIBS
According to

  https://lists.ubuntu.com/archives/ubuntu-devel/2010-March/030430.html

it is wrong to use LOCALMODLIBS in the flags.

See <http://savannah.gnu.org/patch/index.php?8065> for further details.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_PYTHON_DEVEL no longer overrides LOCALMODLIBS. Further details are
+  available at <http://savannah.gnu.org/patch/index.php?8065>.
+
   The portability of AX_ZONEINFO has been improved. Further details can be
   found at <http://savannah.gnu.org/patch/index.php?8029>.
 
