AX_LIB_HDF5: various updates
 - Added variables HDF5_CC and HDF5_FC that one could use to override CC and FC.

 - Added the variable HDF5_LIBS.

 - Modified the test of H5CC to make sure it is a file, as a directory returns
   true to "test -x" if it is searchable.

 - Tried to combine all the tests to get CFLAGS, LDFLAGS etc to be more robust.

See <https://savannah.gnu.org/patch/?8026> for further details.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_LIB_HDF5 has been updated to support the variables HDF5_CC, HDF5_FC, and
+  HDF5_LIBS. See <https://savannah.gnu.org/patch/?8026> for further details.
+
   AX_XSDCXX has been added; a macro to find the CodeSynthesis XSD executable
   and the corresponding headers. See <https://savannah.gnu.org/patch/?8011>
   for further details.
