--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_BOOST_BASE has been extended to recognize aarch64 as a lib64 architecture.
+
   A bug in AX_LIB_HDF5 has been fixed that would result in $CC not being
   restored properly after testing.
 
