--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  Support for 64-bit FreeBSD has been improved in AX_EXT, AX_GCC_ARCHFLAG. See
+  <http://savannah.gnu.org/patch/?8085> for further details.
+
   AX_BOOST_BASE has been extended to recognize aarch64 as a lib64 architecture.
 
   A bug in AX_LIB_HDF5 has been fixed that would result in $CC not being
