--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_EXT has been extended to recognize cases where a CPU supports AVX, but the
+  operating system does not. See <http://savannah.gnu.org/patch/?8084> for
+  further details.
+
   Support for 64-bit FreeBSD has been improved in AX_EXT, AX_GCC_ARCHFLAG. See
   <http://savannah.gnu.org/patch/?8085> for further details.
 
