--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The macros AX_GCC_LIBRARIES_DIR and AX_GCC_VERSION have been marked obsolete
+  because they depend on the obsolete AX_GCC_OPTION macro. Further details can
+  be found at <http://lists.gnu.org/archive/html/autoconf-archive-maintainers/2013-09/msg00000.html>.
+
   New macros AX_BOOST_CONTEXT, AX_BOOST_COROUTINE, AX_BOOST_LOG, AND
   AX_BOOST_LOG_SETUP have been added to detect Boost.Log and Boost.Coroutine.
 
