AX_FIND_SCALA_STDLIB: add support for finding the jar containing the Scala Standard Library

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The new macro AX_FIND_SCALA_STDLIB add support for finding the jar containing
+  the Scala Standard Library. See <https://savannah.gnu.org/patch/?8197> for
+  further details.
+
   The new macro AX_PROG_SCALAC provides support for finding a Scala compiler.
   See <http://savannah.gnu.org/patch/index.php?8195> for further details.
 
