AX_PROG_SCALA: find the path to and version of Scala

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The new macro AX_PROG_SCALA checks that scala is available. Further details
+  are available at <http://savannah.gnu.org/patch/index.php?8198>.
+
   The new macro AX_FIND_SCALA_STDLIB add support for finding the jar containing
   the Scala Standard Library. See <https://savannah.gnu.org/patch/?8197> for
   further details.
