--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  The new macro AX_AM_OVERRIDE_VAR allows "overriding" of user provided
+  variables for Automake. See <http://savannah.gnu.org/patch/?8213> for further
+  details.
+
   AX_COMPILER_VENDOR has been extended to support detection of Fujitsu
   compilers. See <http://savannah.gnu.org/patch/index.php?8212> for further
   details.
